--- a/static/css/style_dark.css
+++ b/static/css/style_dark.css
@@ -1,4 +1,3 @@
-body { font-family: 'PT Sans'!important; }
 .webs-catalog {
   display: grid;
   /* 
@@ -6,9 +5,11 @@ body { font-family: 'PT Sans'!important; }
     el auto-fill al igual que el auto-fit hace que entre más elementos en la misma fila pero no los estira
   */
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-gap: 1px;
-  grid-auto-rows: 300px;
+	grid-gap: 10px;
+  grid-auto-rows: 240px;
 }
+a { color: #c8c8c8!important; }
+a:hover { color: white!important; }
 .webs-catalog > div {
 }
 .webs-catalog .card-img {
@@ -16,17 +17,30 @@ body { font-family: 'PT Sans'!important; }
   height: 100%;
   object-fit: cover;
 }
-.form-control{
-    background-color:  #000!important;
-    color: white!important;
-    border: 0px!important;
-}
-
+.webs-catalog .card-img-overlay{background-color: rgba(0,0,0,0.8)}
+.card { overflow: auto; }
+.misc:hover {  border-left: 5px solid grey; }
 .webs-catalog .card-img-overlay{
-  background-color: rgba(0,0,0,0.85);
 }
 .webs-catalog .card-img-overlay:hover{
-  background-color: rgba(0,0,0,0.65);
+}
+
+.form-control{
+	background-color: transparent!important;
+	color: white!important;
+}
+
+.fixed {
+  position: fixed;
+  top:1500px;
+  width: 100%;
+}
+
+.sticky {
+  position: fixed;
+  top: 234px;
+	z-index: 1;
+  width: 100%;
 }
 
 
@@ -36,10 +50,6 @@ body { font-family: 'PT Sans'!important; }
 
 * {box-sizing: border-box;}
 
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
 .section {
   border: 1px solid #ccc;
   display: flex;
