--- a/templates/category.html
+++ b/templates/category.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="webs-catalog">
 	{% for post in posts %}
-  <div class="card" style="">
+  <div class="card" style="overflow: auto;">
 			<!-- Chequear la extensión primero antes de mostrar img -->
 		{% for img in post.files %}
 			{% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
