--- a/static/css/style_dark.css
+++ b/static/css/style_dark.css
@@ -1,12 +1,13 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900);
+body { margin-top: 70px!important; font-family: 'Source Sans Pro', sans-serif!important;}
 .webs-catalog {
   display: grid;
   /* 
     El auto-fit estira el elemento a la resolución del monitor,
     el auto-fill al igual que el auto-fit hace que entre más elementos en la misma fila pero no los estira
   */
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-	grid-gap: 10px;
-  grid-auto-rows: 240px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-auto-rows: 380px;
 }
 a { color: #c8c8c8!important; }
 a:hover { color: white!important; }
@@ -17,7 +18,23 @@ a:hover { color: white!important; }
   height: 100%;
   object-fit: cover;
 }
-.webs-catalog .card-img-overlay{background-color: rgba(0,0,0,0.8)}
+.list { transition: all 0.1s; }
+.list:hover { transform: scale(1.05); z-index: 1; }
+.webs-catalog .card-img-overlay{
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.98),
+      rgba(0, 0, 0, 0)
+    );
+}
+
+.title {
+  text-transform: uppercase;
+  margin: 0;
+	overflow: hidden;
+	color: white!important;
+	text-shadow: 0 1px 0 black;
+}
 .card { overflow: auto; }
 .misc:hover {  border-left: 5px solid grey; }
 .webs-catalog .card-img-overlay{
