--- a/templates/misc.html
+++ b/templates/misc.html
@@ -4,7 +4,7 @@
 {% block content %}
   <div class="webs-catalog">
     {% for post in news %}
-    <div class="card" style="">
+    <div class="card list" style="">
         <!-- Chequear la extensión primero antes de mostrar img -->
       {% for img in post.files %}
         {% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
@@ -18,7 +18,7 @@
       {% endfor %}
       <a href="/view/{{post.id}}" >
         <div class="card-img-overlay "> 
-          <h4 class="card-title ">{{post.subject[:85]}}</h4>
+          <h4 class="card-title title">{{post.subject[:85]}}</h4>
           <span class="card-subtitle mb-2 text-muted">{{post.views}} vistas</span> |
           <span class="card-subtitle mb-2 text-muted">1234 comentarios</span>
         </div>
