--- a/templates/view.html
+++ b/templates/view.html
@@ -9,7 +9,7 @@
 		<div class="col-lg-6">
 				<a href="/delete/post/{{post.id}}" class=""><span>BORRAR</span></a> |
 				<a href="/delete/post/{{post.id}}" class=""><span>REPORTAR</span></a>
-				<h3 style="">{{post.subject}}</h3>
+				<h3 style="word-wrap: break-word;">{{post.subject}}</h3>
 				<div style="" class="">
 						{% for img in post.files %}
 							<!-- Chequear la extensión primero antes de mostrar img -->
@@ -19,7 +19,7 @@
 									<img id="test" style="float: left; margin: 0px 15px 15px 0px; width: 100%;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}" />
                   <br style="clear: both;" />
 								</a>
-								{{bbcode.render_html(post.desc)|safe}}
+                  <p style="word-wrap: break-word;">{{bbcode.render_html(post.desc)|safe}}</p>
 							</p>
 
 							{% elif img.extension in ('webm', 'mp4') %}
@@ -59,18 +59,19 @@
           </div>
         </header>
       <div class="comments" style="">
+        <a href="#" id="testa" onmouseover="openReply(5)" onmouseout="closeReply(5)">Prueba >>5</a>
         {% for c in comments %}
         <div class="card misc">
           <div id="{{c.id}}" class="" style="padding: 10px;">
             <p class="intro">
-            <a class="post_no" onclick="citeReply(350)" href="/delete/comment/{{c.id}}?id={{post.id}}">X</a>
+            <a class="post_no" href="/delete/comment/{{c.id}}?id={{post.id}}">X</a>
               <label for="something_{{c.id}}">
               <span class="name">Anon</span> 
-              <img class="flag flag-ar" xs="//media.8kun.top/static/flags/ar.png" src="//media.8kun.top/static/blank_flag.gif" style="" alt="Argentina" title="Argentina">
+              <img class="flag flag-ar" xs="media.8kun.top/static/flags/ar.png" src="https://media.8kun.top/static/flags/ar.png" style="" alt="Argentina" title="Argentina">
               <time datetime="{{c.created_date}}" data-local="true">{{c.created_date.strftime("%d/%m/%y (%A) %H:%M:%S")}}</time>
               </label>
               No.    
-              <a class="post_no" onclick="citeReply(350)" href="javascript:void(0)">{{c.id}}</a>
+              <a class="post_no" onclick="citeReply({{c.id}})" href="javascript:void(0)">{{c.id}}</a>
               <span class="mentioned unimportant">
                 <!-- <a class="mentioned-422" style="margin-left: 10px; " onclick="highlightReply('422', event);" href="#422">&gt;&gt;</a>-->
               </span>
@@ -85,13 +86,12 @@
                   </span>
                   <a title="{{c.filename}}" href="{{url_for('static', filename='user_data/images/')}}{{c.filename}}">{{c.filename[:30]}}</a>
                   <span class="unimportant">
-                    (12,47 MB
-                    <a download="{{c.filename}}" href="{{url_for('static', filename='user_data/images/')}}{{c.filename}}">descargar</a>)
+                   (<a download="{{c.filename}}" href="{{url_for('static', filename='user_data/images/')}}{{c.filename}}">descargar</a>)
                   </span>
                 </p>
                 <a href="{{url_for('static', filename='user_data/images/')}}{{c.filename}}" target="_blank" class="file">
                   {% if c.file_ext in ('jpg', 'gif', 'jpeg', 'png') %}
-                    <img class="post-image" src="{{url_for('static', filename='user_data/images/')}}{{c.filename}}" style="height:147px" alt="" data-md5="8roXFP0PYrgtGDXFuop1UA==">
+                    <img class="post-image" src="{{url_for('static', filename='user_data/images/')}}{{c.filename}}" style="" alt="" data-md5="8roXFP0PYrgtGDXFuop1UA==">
                   {% elif c.file_ext in ('webm', 'mp4') %}
                     <video class="post-image" src="{{url_for('static', filename='user_data/images/')}}{{c.filename}}" style="width:255px;height:147px" alt="" loop controls/>
                       Your browser does not support the video tag.
@@ -114,6 +114,24 @@
         {% endfor %}
       </div>
     </div>
+    <script>
+      function replace(){
+        var cite = />>(.*?)->/g;
+      }
+      function openReply(ID){
+        var comment = $('#'+ID).html();
+
+        $('#testa').append('<div class="comment bg-dark" style="position: absolute; display: block; z-index:100;">'+comment+'</div>');
+      }
+
+      function closeReply(ID){
+        $('.comment').detach();
+      }
+      function citeReply(ID){
+        var commentArea = $('#comment');
+        commentArea.val(commentArea.val() + '>>'+ID+'\n');
+      }
+    </script>
   </div>
 
 {% endblock %}
