--- a/templates/view.html
+++ b/templates/view.html
@@ -59,7 +59,7 @@
           </div>
         </header>
       <div class="comments" style="">
-        <a href="#" id="testa" onmouseover="openReply(5)" onmouseout="closeReply(5)">Prueba >>5</a>
+        <a href="#" id="testa" onmouseover="openReply(5)" onmouseout="closeReply(5)">Prueba [5]</a>
         {% for c in comments %}
         <div class="card misc">
           <div id="{{c.id}}" class="" style="padding: 10px;">
@@ -102,7 +102,7 @@
             </div>
             {% endif %}
             <div class="body">
-              {{  bbcode.render_html(c.comment)|safe }}<br/>
+              {{  parser.format(c.comment)|safe }}<br/>
             </div>
             <div>
               <i> <small class="disclaimer-flashlightning"></small> </i>
@@ -121,7 +121,8 @@
       function openReply(ID){
         var comment = $('#'+ID).html();
 
-        $('#testa').append('<div class="comment bg-dark" style="position: absolute; display: block; z-index:100;">'+comment+'</div>');
+        var quote_id = '#'+'quote-'+ID
+        $(quote_id).append('<div class="comment bg-dark" style="position: relative; display: block;  z-index:1000; background-color: red; overflow: visible;">'+comment+'</div>');
       }
 
       function closeReply(ID){
@@ -129,7 +130,7 @@
       }
       function citeReply(ID){
         var commentArea = $('#comment');
-        commentArea.val(commentArea.val() + '>>'+ID+'\n');
+        commentArea.val(commentArea.val() + '[q]'+ID+'[/q]'+'\n');
       }
     </script>
   </div>
