--- a/templates/upload.html
+++ b/templates/upload.html
@@ -12,8 +12,16 @@
             <dl>
               {{ form.subject.label }}
               {{ render_field(form.subject, class='form-control', placeholder='Título') }}
-              {{ form.files.label }}
-              {{ render_field(form.files, class='form-control', onChange="loadFile(event)") }}
+              <div class="row">
+                <div class="col">
+                {{ form.files.label }}
+                {{ render_field(form.files, class='form-control', onChange="loadFile(event)") }}
+                </div>
+                <div class="col">
+                {{ form.audio.label }}
+                {{ render_field(form.audio, class='form-control') }}
+                </div>
+              </div>
               <strong>
                 <ul id="fileList" style="">
                   <li style="">
