How to create the database

--- a/templates/view.html
+++ b/templates/view.html
@@ -127,7 +127,7 @@
 
       function citeReply(ID){
         var commentArea = $('#comment');
-        commentArea.val(commentArea.val() + '[q]'+ID+'[/q]'+'\n');
+        commentArea.val(commentArea.val() + '[q]'+ID+'[/q]'+' ');
       }
     </script>
   </div>
