--- a/templates/view.html
+++ b/templates/view.html
@@ -66,7 +66,7 @@
             <a class="post_no" href="/delete/comment/{{c.id}}?id={{post.id}}">X</a>
               <label for="something_{{c.id}}">
               <span class="name">Anon</span> 
-              <img class="flag flag-ar" xs="media.8kun.top/static/flags/ar.png" src="https://media.8kun.top/static/flags/ar.png" style="" alt="Argentina" title="Argentina">
+              <!--<img class="flag flag-ar" xs="media.8kun.top/static/flags/ar.png" src="https://media.8kun.top/static/flags/ar.png" style="" alt="Argentina" title="Argentina">-->
               <time datetime="{{c.created_date}}" data-local="true">{{c.created_date.strftime("%d/%m/%y (%A) %H:%M:%S")}}</time>
               </label>
               No.    
