--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item ">
-            <a class="nav-link {% if nbar == 'categories' %}active{% endif %}" href="/misc">Misc</a>
+            <a class="nav-link {% if nbar == 'categories' %}active{% endif %}" href="/categories">Categories</i></a>
           </li>
         </ul>
 				<ul class="navbar-nav navbar-center">
