--- a/templates/view.html
+++ b/templates/view.html
@@ -7,8 +7,8 @@
 <div class="jumbotron-fluid">
   <div class="row">
 		<div class="col-lg-6">
-				<a href="/delete/post/{{post.id}}" class=""><span>BORRAR</span></a> |
-				<a href="/delete/post/{{post.id}}" class=""><span>REPORTAR</span></a>
+				<a href="/delete/post/{{post.id}}" class="btn-sm btn-danger"><span>BORRAR</span></a>
+				<a href="/delete/post/{{post.id}}" class="btn-sm btn-secondary"><span>REPORTAR</span></a>
 				<h3 style="word-wrap: break-word;">{{post.subject}}</h3>
 				<div style="" class="">
 						{% for img in post.files %}
@@ -63,14 +63,13 @@
         <div class="card misc">
           <div id="{{c.id}}" class="cc" onclick="closeReply({{c.id}})" style="padding: 10px;">
             <p class="intro">
-            <a class="post_no" href="/delete/comment/{{c.id}}?id={{post.id}}">X</a>
+            <a class="post_no btn-danger btn-sm" href="/delete/comment/{{c.id}}?id={{post.id}}">X</a>
               <label for="something_{{c.id}}">
               <span class="name">Anon</span> 
               <!--<img class="flag flag-ar" xs="media.8kun.top/static/flags/ar.png" src="https://media.8kun.top/static/flags/ar.png" style="" alt="Argentina" title="Argentina">-->
               <time datetime="{{c.created_date}}" data-local="true">{{c.created_date.strftime("%d/%m/%y (%A) %H:%M:%S")}}</time>
               </label>
-              No.    
-              <a class="post_no" onclick="citeReply({{c.id}})" href="javascript:void(0)">{{c.id}}</a>
+              <a class="post_no btn-sm btn-info text-dark rounded-pill" onclick="citeReply({{c.id}})" href="javascript:void(0)"> No. {{c.id}} </a>
               <span class="mentioned unimportant">
               </span>
             </p> 
