--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
                       <a class="dropdown-item" href="/rules">Reglas</a>
                       <a class="dropdown-item" href="/contact">Contacto</a>
                       <a class="dropdown-item" href="/faq">FAQ</a>
+                      <a class="dropdown-item" href="/tor">Dirección Tor</a>
                       <a class="dropdown-item" href="/helpme">Ayudar</a>
                   </div>
               </li>
